--- a/css/styles.css
+++ b/css/styles.css
@@ -296,21 +296,38 @@ body {
     justify-content: center;
     gap: 24px;
     text-align: center;
+    
 }
     
 .list {}
     
 .customers-card {
-    width: 168px;
+    width: calc((100% - 120px) / 6);
     height: 88px;
     border-radius: 4px;
-        border: 1px solid var(--lightslate, #8E8F99);
+    border: 1px solid var(--lightslate, #8E8F99);
 }
     
 .card {}
     
-.cliens-link {}
-    
+.cliens-link {
+width: 100%;
+height: 100%;
+border: 1px solid var(--fill-icon-customer);
+border-radius: 4px;
+display: flex;
+align-items: center;
+justify-content: center;
+color: var(--fill-icon-customer);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers-card .cliens-link:hover,
+.customers-card .cliens-link:focus,
+.customers-card .cliens-link:active{
+    border-color: var(--fill-icon-customer-hover);
+    color: var(--fill-icon-customer-hover);
+}
+
 .clients-icon {
     margin: 16px 32px;
 }
