--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@ body {
     width: calc((100% - 120px) / 6);
     height: 88px;
     border-radius: 4px;
-    border: 1px solid var(--lightslate, #8E8F99);
+  
 }
     
 .card {}
@@ -331,16 +331,18 @@ color: var(--fill-icon-customer);
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-card .cliens-link .clients-icon:hover,
-.customers-card .cliens-link .clients-icon:focus,
-.customers-card .cliens-link .clients-icon:active{
+.customers-card .cliens-link :hover,
+.customers-card .cliens-link :focus,
+.customers-card .cliens-link :active{
     border-color: var(--fill-icon-customer-hover);
     color: var(--fill-icon-customer-hover);
 }
 
 .clients-icon {
     margin: 16px 32px;
-    fill: currentColor;
+    display: inline-flex;
+        fill: currentColor;
+   
     
 }
 /*portfolio.html section styles*/
