--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,5 @@
-/*reset*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-    margin: 0;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-.link {
-    text-decoration: none;
-    color: currentColor;
-}
-
-.address-style {
-    font-style: normal;
-}
-
-/*variables*/
-
 :root {
---color-heder-link: #2e2f42;
+    --color-heder-link: #2e2f42;
     --color-heder-link-ahf: #404bbf;
     --color-main-text: #434455;
     --bg-color-btn: #4d5ae5;
@@ -49,66 +21,254 @@ ul {
     --fill-icon-customer-hover: #404bbf;
 }
 
-/*base styles*/
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
 
 body {
-    font-family: var(--primary-font-family);
+    font-family: 'Roboto', sans-serif;
+    color: var(--color-main-text);
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
-    color: var(--body-text-color);
-    /* or 150% */
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    background-color: var(--white-color);
-}
-
-.section-alfa {
-    padding-bottom: 120px;
-}
-
-.section-beta {
-    padding: 120px 0;
+    background-color: var(--bg-body-color);
 }
 
 .container {
-    max-width: 1158px;
+    width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
 }
 
-.card:not(:last-child) {
-    margin-right: 24px;
+a {
+    text-decoration: none;
 }
 
-.header-one {
+.link {
+    text-decoration: none;
+}
+
+.paragraf {
+    font-size: 16px;
+}
+
+.paragraf-portfolio {
+    font-size: 16px;
+    color: var(--color-main-text);
+}
+
+.list {
+    list-style: none;
+}
+
+.main-title {
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
+    line-height: 107%;
     letter-spacing: 0.02em;
-    color: var(--white-color);
+    text-align: center;
+    color: var(--color-main-title);
 }
 
-.header-two {
+.second-title {
+    font-family: 'Roboto';
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
+    line-height: 111%;
     letter-spacing: 0.02em;
+    text-align: center;
     text-transform: capitalize;
-    color: var(--dark-color);
+    color: var(--color-heder-link);
 }
 
-.header-three {
+.third-header {
     font-weight: 500;
     font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--dark-color);
-    margin-bottom: 8px;
+    color: var(--color-heder-link);
 }
 
-.photo {
+.header {
+    background-color: var(--bg-body-color);
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+header>.header-section {
+    display: flex;
+    align-items: center;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+
+.navigation>.list {
+    margin-left: 76px;
+    width: 261px;
+}
+
+.link-logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 117%;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--bg-color-btn);
+    margin-right: 76px;
+}
+
+.header-logo-link {
+    color: var(--color-heder-link);
+}
+
+.footer-logo-link {
+    color: var(--color-footer-logo);
+}
+
+.header .link-logo {
+    padding: 24px 0;
+}
+
+.header-menu {
+    display: flex;
+    gap: 40px;
+}
+
+.header-menu-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-heder-link);
+    padding: 24px 0;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link:hover,
+.header-menu-link:focus {
+    color: var(--color-heder-link-ahf);
+}
+
+.header-menu-link:active {
+    color: var(--color-heder-link-ahf);
+}
+
+.is-active {
+    color: var(--color-heder-link-ahf);
+}
+
+.is-active::after {
+    position: absolute;
+    content: '';
     display: block;
+    left: 0;
+    bottom: 0;
     width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--color-heder-link-ahf);
+    bottom: -1px;
+}
+
+.contacts {
+    font-style: normal;
+    margin-left: auto;
+}
+
+.contacts .list {
+    display: flex;
+    gap: 40px;
+}
+
+.header-contacts-link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-main-text);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-contacts-link:hover,
+.header-contacts-link:focus {
+    color: var(--color-heder-link-ahf);
+}
+
+.order-section {
+    background-color: var(--color-heder-link);
+    padding: 188px 0;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(/images/people_office_1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.order-section .main-title {
+    max-width: 496px;
+    margin: 0 auto;
+}
+
+.btn {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    color: var(--color-btn-text);
+    background-color: var(--bg-color-btn);
+    border: none;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    margin-top: 48px;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:hover,
+.btn:focus {
+    background: var(--bg-color-btn-hf);
+}
+
+.advantage-section {
+    padding: 120px 0;
 }
 
 .visually-hidden {
@@ -124,301 +284,387 @@ body {
     overflow: hidden;
 }
 
-/*logo*/
-
-.logo {
-    font-family: var(--logo-font-family);
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--primary-brand-color);
-    margin-right: 76px;
-}
-
-/*header styles*/
-
-.header {
-    background-color: var(--white-color);
-    border-bottom: 1px solid var(--accent-color);
-}
-
-.header-container {
+.advantage-section .list {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 24px;
 }
 
-.header-link {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
+.advantage-box {
+    width: calc((100% - 72px) / 4);
 }
 
-.nav-container {
+.container-icon-advantage {
     display: flex;
     align-items: center;
-}
-
-.nav-logo-span {
-    color: var(--dark-color);
-}
-
-.nav-menu-container {
-    display: flex;
-    max-width: 261px;
-    gap: 40px;
-    align-items: center;
-}
-
-.nav-menu {
-    font-weight: 500;
-    color: var(--dark-color);
-}
-
-.nav-menu:hover,
-.address-text:hover,
-.nav-menu:focus,
-.address-text:focus {
-    color: var(--pressed-state-color);
-}
-
-.address-container {
-    display: flex;
-    gap: 40px;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-/*index.html section 1 styles*/
-
-.hero {
-    background-color: var(--dark-color);
-    padding: 188px 0;
-}
-
-.hero-header {
-    margin: 0 auto 48px auto;
-    max-width: 496px;
-}
-
-.order-service-button {
-    border: none;
-    font-family: var(--primary-font-family);
-    background-color: var(--primary-brand-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.04em;
-    color: var(--white-color);
-    cursor: pointer;
-    display: block;
-    margin: 0 auto;
-    padding: 16px 32px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    justify-content: center;
+    height: 112px;
+    background-color: var(--bg-main-color);
+    padding: 24px 100px;
+    margin-bottom: 8px;
     border-radius: 4px;
-    height: 56px;
-    min-width: 169px;
 }
 
-.order-service-button:hover,
-.order-service-button:focus {
-    background-color: var(--pressed-state-color);
+.container-icon-advantage svg {
+    width: 64px;
+    height: 64px;
+    display: inline-block;
 }
 
-/*index.html section 2 styles*/
+.advantage-box .third-header {
+    margin-bottom: 8px;
+}
 
-.webstudio-container {
+.our-work-section {
+    padding-bottom: 120px;
+}
+
+.our-work-section .second-title {
+    margin-bottom: 72px;
+}
+
+.our-work-section .list {
+    display: flex;
+    gap: 24px;
+}
+
+.our-work-box {
+    width: calc((100% - 48px) / 3);
+}
+
+.team-section {
+    background-color: var(--bg-main-color);
+    padding: 120px 0;
+}
+
+.team-section .second-title {
+    margin-bottom: 72px;
+}
+
+.team-section .list {
+    display: flex;
+    gap: 24px;
+}
+
+.team-list-box {
+    background-color: var(--bg-body-color);
+    text-align: center;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.team-name-position {
+    padding: 32px 0;
+}
+
+.team-name-position .third-header {
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.team-name-position .paragraf {
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.team-name-position a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-btn);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-name-position a:hover,
+.team-name-position a:focus {
+    background-color: var(--bg-color-btn-hf);
+}
+
+.team-name-position .list {
     display: flex;
     justify-content: center;
 }
 
-.webstudio-container-item {
-    flex-basis: calc((100% - 3 * 24px) / 4);
+.team-name-position .icon {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    fill: var(--bg-main-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/*index.html section 3 styles*/
-
-.portfolio-header {
-    margin: 0 auto 72px;
-}
-
-.portfolio-container {
-    display: flex;
-}
-
-.portfolio-card {
-    flex-basis: calc((100% - 2 * 24px) / 3);
-    max-height: 300px;
-}
-
-/*index.html section 4 styles*/
-
-.team {
-    background-color: var(--light-color);
-}
-
-.team-header {
-    margin: 0 auto 72px;
-}
-
-.team-container {
-    display: flex;
-}
-
-.team-card {
-    background-color: var(--white-color);
-    flex-basis: calc((100% - 3 * 24px) / 4);
-    max-height: 380px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
-}
-
-.team-card-content {
-    text-align: center;
-    padding: 32px 16px;
-}
-
-.team-text {
-    /*useles rule, just autocheck requirement to assign class to <p>*/
-    display: block;
-}
-
-
-/* Section customers */
 
 .customers {
-    display: flex;
+    padding: 120px 0;
 }
-    
-.header-two {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 72px;
 
+.customers .second-title {
+    margin-bottom: 72px;
 }
-    
-.customers-logo {
+
+.customers .list {
     display: flex;
-    justify-content: center;
     gap: 24px;
-    text-align: center;
-    
 }
-    
-.list {}
-    
-.customers-card {
+
+.customers-list-box {
     width: calc((100% - 120px) / 6);
     height: 88px;
-    border-radius: 4px;
-  
-}
-    
-.card {}
-    
-.cliens-link {
-width: 100%;
-height: 100%;
-border: 1px solid var(--fill-icon-customer);
-border-radius: 4px;
-display: flex;
-align-items: center;
-justify-content: center;
-color: var(--fill-icon-customer);
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-card .cliens-link :hover,
-.customers-card .cliens-link :focus,
-.customers-card .cliens-link :active{
+.customers-list-box .link {
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--fill-icon-customer);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--fill-icon-customer);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-list-box .link:hover,
+.customers-list-box .link:focus,
+.customers-list-box .link:active {
     border-color: var(--fill-icon-customer-hover);
     color: var(--fill-icon-customer-hover);
 }
 
-.clients-icon {
-    margin: 16px 32px;
+.icon_customers {
     display: inline-flex;
-        fill: currentColor;
-   
-    
-}
-/*portfolio.html section styles*/
-
-.portfolio-page-section {
-    padding-top: 96px;
+    fill: currentColor;
 }
 
-/*portfolio.html filter styles*/
-
-.portfolio-page-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto 72px;
+.icon_customers .link:hover,
+.icon_customers .link:focus,
+.icon_customers .link:active {
+    color: var(--fill-icon-customer-hover);
+    border-color: var(--fill-icon-customer-hover);
 }
-
-.filter-button {
-    font-family: var(--primary-font-family);
-    background-color: var(--light-color);
-    border: 1px solid var(--accent-color);
-    border-radius: 4px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: var(--primary-brand-color);
-    cursor: pointer;
-    padding: 12px 24px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.filter-button:hover,
-.filter-button:focus {
-    background-color: var(--pressed-state-color);
-    border: 1px solid transparent;
-    color: var(--white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-/*portfolio.html portfolio styles*/
-
-.portfolio-page-list-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 48px 24px;
-}
-
-.portfolio-page-card {
-    flex-basis: calc((100% - 2 * 24px) / 3);
-}
-
-.portfolio-page-card-content {
-    padding: 32px 16px;
-    border: 1px solid var(--accent-color);
-    border-top: none;
-}
-
-/*footer styles*/
 
 .footer {
-    background-color: var(--dark-color);
+    background-color: var(--color-heder-link);
     padding: 100px 0;
 }
 
-.footer-link {
+.footer .container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-text-box {
+    margin-right: 120px;
+}
+
+.footer .link-logo {
     display: inline-block;
     margin-bottom: 16px;
 }
 
-.footer-paragraph {
+footer .paragraf {
+    color: var(--color-footer-paragraf);
     max-width: 264px;
 }
 
-.footer-text {
-    color: var(--light-color);
+.footer-social-links-box .paragraf {
+    color: var(--color-social-paragraf);
+    margin-bottom: 16px;
+    font-weight: 500;
+}
+
+.footer-social-links-box .list {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-link-container a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bg-color-btn);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-links-box a:hover,
+.footer-social-links-box a:focus {
+    background-color: var(--bg-social-link-hover);
+}
+
+.icon-footer {
+    display: inline-block;
+    position: absolute;
+    fill: var(--color-footer-logo);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.portfolio-section {
+    padding-top: 96px;
+    padding-bottom: 120px;
+}
+
+.menu-portfolio {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 72px;
+}
+
+.btn-portfolio {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    color: var(--bg-color-btn);
+    background-color: var(--bg-main-color);
+    border: 1px solid var(--border-color);
+    cursor: pointer;
+    padding: 12px 24px;
+    border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-portfolio:hover,
+.btn-portfolio:focus {
+    color: var(--color-btn-text);
+    background-color: var(--bg-color-btn-hf);
+    border: 1px solid transparent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.blocks-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.overlay-box {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay-text {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 40px 32px;
+    background-color: var(--bg-overlay-text);
+    color: var(--color-overlay-text);
+    top: 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-box {
+    width: calc((100% - 48px) / 3);
+}
+
+.portfolio-box .link {
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-box .link:hover,
+.portfolio-box .link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-box .link:hover .overlay-text,
+.portfolio-box .link:focus .overlay-text {
+    transform: translateY(0%);
+}
+
+.portfolio-box .portfolio-card {
+    border: 1px solid var(--border-color);
+    padding: 32px 16px;
+    border-top: none;
+}
+
+.portfolio-box .third-header {
+    margin-bottom: 8px;
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal-box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--bg-modal-box);
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.callback-form {
+    opacity: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background: var(--bg-callback-form);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn_modal {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: var(--border-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn_modal:hover,
+.btn_modal:focus {
+    background-color: var(--bg-color-btn-hf);
+    fill: var(--color-btn-text);
+    border: none;
+}
+
+.icon-btn-close {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-btn-close:hover,
+.icon-btn-close:focus {
+    fill: var(--color-btn-text);
 }
