--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ header>.header-section {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--color-heder-link);
+    color:var(--bg-color-btn-hf);
     padding: 24px 0;
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -198,7 +198,7 @@ header>.header-section {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color: var(--color-heder-link-ahf);
+    background-color: var(--bg-color-btn-hf);
     bottom: -1px;
 }
 
