--- a/css/styles.css
+++ b/css/styles.css
@@ -497,9 +497,14 @@ footer .paragraf {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-links-box a:hover,
-.footer-social-links-box a:focus {
+.footer-social-links-box a:hover{
     background-color: var(--bg-social-link-hover);
+    border: none;
+}
+    
+.footer-social-links-box a:focus {
+    background-color: var(--bg-color-btn-hf);
+    border: none    ;
 }
 
 .icon-footer {
