--- a/css/styles.css
+++ b/css/styles.css
@@ -657,21 +657,17 @@ footer .paragraf {
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.btn {
-    background-color:var(--bg-color-btn-hf);
+
+.btn_modal:hover {
+    background-color: var(--bg-color-btn-hf);
+        fill: var(--color-btn-text);
+        border: none;
+}
+
+.btn_modal:focus {
+    background-color: var(--bg-color-btn-hf);
+    fill: var(--color-btn-text);
     border: none;
-}
-
-.btn:hover {
-    background-color:var(--bg-color-btn-hf);
-    /* Інші стилі при ховері на кнопку */
-}
-
-.btn:focus {
-    background-color:var(--bg-color-btn-hf);
-    /* Інші стилі при фокусі на кнопку */
-    outline: none;
-    /* Якщо ви хочете прибрати орієнтований контур, також */
 }
 
 .icon-btn-close {
