--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ header>.header-section {
 }
 
 .header-menu-link {
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
